src/index.css
@import "~normalize.css";
@import "~@blueprintjs/core/lib/css/blueprint.css";
@import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
@import "~@blueprintjs/popover2/lib/css/blueprint-popover2.css";

html, body {
  height: 100%;
  scroll-behavior: smooth;
  cursor: auto;
}

:root {
  --black: #111418;
  --white: #FFFFFF;

  --dark-gray1: #1C2127;
  --dark-gray2: #252A31;
  --dark-gray3: #2F343C;
  --dark-gray4: #383E47;
  --dark-gray5: #404854;

  --gray1: #5F6B7C;
  --gray2: #738091;
  --gray3: #8F99A8;
  --gray4: #ABB3BF;
  --gray5: #C5CBD3;

  --light-gray1: #D3D8DE;
  --light-gray2: #DCE0E5;
  --light-gray3: #E5E8EB;
  --light-gray4: #EDEFF2;
  --light-gray5: #F6F7F9;

  --titlebar-colour: var(--light-gray2);
  --body-colour: var(--light-gray5);
  --titlebar-lower-colour: var(--light-gray4);
  --border-colour: var(--light-gray1);

  --regular-text: var(--black);
  --subtle-text: var(--gray1);
}

.bp4-dark {
  --titlebar-colour: var(--dark-gray1);
  --body-colour: var(--dark-gray3);
  --titlebar-lower-colour: var(--dark-gray2);
  --border-colour: var(--dark-gray4);

  --regular-text: var(--white);
  --subtle-text: var(--gray4);
}

#root {
  background-color: var(--body-colour);
  height: 100%;
  border: 1px solid var(--border-colour);
  display: flex;
  flex-direction: column;
  color: var(--regular-text);
}

.titlebar {
  padding: 5px;
  display: flex;
  flex-direction: row;
  background-color: var(--titlebar-colour);
  width: 100%;
  height: fit-content;
  justify-content: space-between;
  border-bottom: 1px solid var(--border-colour);
  position: relative;
  user-select: none;
}

.titlebar > .titlebar\:left > * {
  margin-left: 0px;
  margin-right: 7px;
}

.titlebar > .titlebar\:left, .titlebar > .titlebar\:right {
  display: flex;
  flex-direction: row;
}

.titlebar\:button {
  color: var(--subtle-text) !important;
  font-weight: 500; 
}

.titlebar > .titlebar\:right > * {
  margin-left: 7px;
  margin-right: 2px;
}

.titlebar\:text {
  text-align: center;
  vertical-align: middle;
  line-height: 24px;
  font-weight: 400;
  color: var(--subtle-text) !important;
}

.titlebar\:text\:semibold {
  text-align: center;
  vertical-align: middle;
  line-height: 24px;
  font-weight: 500;
  color: var(--subtle-text) !important;
}

.titlebar\:toolbar {
  padding: 5px;
  display: flex;
  flex-direction: row;
  flex-grow: 1;
  max-height: 35px;
  background: var(--titlebar-colour);
  position: relative;
  overflow-x: hidden;
  border-bottom: 1px solid var(--border-colour);
  scroll-behavior: smooth;
  user-select: none;
  z-index: 1;
}

.titlebar\:toolbar::-webkit-scrollbar {
  height: 20px;
  width: 20px;
}

.titlebar\:toolbar:hover {
  overflow-x: scroll;
  max-height: 55px;
}

.titlebar\:toolbar > * {
  margin-left: 7px;
  margin-right: 7px;
}

.titlebar\:toolbar > *:not(div.bp4-divider):not(span) {
  display: contents;
}

.titlebar\:toolbar > span {
  margin-left: 7px;
  margin-right: 7px;
}

.titlebar\:toolbar > *:last-child {
  margin-right: 0px;
}

.titlebar\:display {
  background: var(--titlebar-lower-colour);
  width: 100%;
  position: relative;
  height: 20px;
  border-bottom: 1px solid var(--border-colour);
  padding-left: 7px;
  padding-right: 7px;
  user-select: none;
}

.titlebar\:display > .titlebar\:text {
  line-height: 20px;
}

.titlebar\:toolbar:hover ~ .titlebar\:display {
  margin-top: -20px;
}

.titlebar\:display\:right {
  float: right;
}

.titlebar\:display\:left {
  float: left;
}

.content {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  color: var(--regular-text);
  overflow: none;
}

.texteditor {
  border-style: none;
  border-color: Transparent;
  overflow: auto;
  outline: none;
  background: transparent;
  width: 100%;
  height: 100%;
  resize: none;
  padding: 10px;
  line-height: 2.5ch;
  color: var(--regular-text);
  cursor: auto;
}

::-webkit-scrollbar {
  width: 14px;
  height: 14px;
  position: absolute;
}

::-webkit-scrollbar-thumb {
  background-color: var(--titlebar-colour);
  border-radius: 0px;
}

::-webkit-scrollbar-track {
  background: var(--titlebar-lower-colour);
  position: absolute;
}

::-webkit-scrollbar-track:vertical, ::-webkit-scrollbar-thumb:vertical, ::-webkit-scrollbar-corner {
  border-left: 1px solid var(--border-colour);
}

::-webkit-scrollbar-track:horizontal, ::-webkit-scrollbar-thumb:horizontal, ::-webkit-scrollbar-corner {
  border-top: 1px solid var(--border-colour);
}

::-webkit-scrollbar-corner {
  background: var(--titlebar-lower-colour);
}

